--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theme-template",
+  "name": "re-big-files",
   "version": "1.0.0",
   "description": "A theme template",
   "engines": {
@@ -14,7 +14,11 @@
     "lint:fix": "prettier ./src --write"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "email": "shady@shadygoat.eu",
+    "name": "Lucy Dryaeva",
+    "url": "https://shadygoat.eu"
+  },
   "license": "ISC",
   "devDependencies": {
     "@parcel/config-default": "^2.9.3",
@@ -22,5 +26,8 @@
     "@types/node": "^18.17.1",
     "prettier": "^2.8.8",
     "replugged": "^4.5.1"
+  },
+  "dependencies": {
+    "@parcel/transformer-sass": "^2.9.3"
   }
 }
