--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,10 @@
     "discordID": "376079696489742338",
     "github": "ShadiestGoat"
   },
-  "version": "1.1.2",
+  "version": "1.1.3",
   "updater": {
-    "type": "store",
-    "id": "eu.shadygoat.bigFiles"
+    "type": "github",
+    "id": "ShadiestGoat/ReImportantThemeBigFiles"
   },
   "license": "MIT",
   "type": "replugged-theme",
